--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -20,9 +24,41 @@
     </div>
 
     <div class="main">
-      <section id="1" class="about"></section>
-      <section id="2" class="service"></section>
-      <section id="3" class="contact_us"></section>
+      <section id="1" class="about">
+        <div class="content">
+          <h1>Welcome brader</h1>
+          <p>Here we go again. :)</p>
+          <p><a href="#3">Wanna Join</a></p>
+        </div>
+      </section>
+
+      <section id="2" class="service">
+        <div class="content">
+          <h1>Services we offer</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio
+            velit inventore, expedita quo laboriosam possimus ea consequatur
+            vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore
+            ut velit dignissimos.
+          </p>
+        </div>
+      </section>
+
+      <section id="3" class="contact_us">
+        <div class="content">
+          <h1>You Can Reach Us</h1>
+          <a href="#" class="email button"
+            ><span class="fa-brands fa-google"></span>E-mail</a
+          >
+          <p>atau</p>
+          <a href="#" class="facebook button"
+            ><span class="fa fa-facebook"></span>Facebook</a
+          >
+          <a href="#" class="twitter button"
+            ><span class="fa fa-twitter"></span>Twitter</a
+          >
+        </div>
+      </section>
     </div>
 
     <div class="footer">
