--- a/index.html
+++ b/index.html
@@ -1,94 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
-    />
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HelloPet</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="animate.css">
   </head>
   <body>
-    <div class="header">
-      <div class="header-logo">TUGAS</div>
-      <div class="header-list">
-        <ul>
-          <li>About</li>
-          <li>Service</li>
-          <li>Contact</li>
-        </ul>
+    <header>
+      <div class="container">
+        <div class="header-left">
+            <img class="logo" src="Logo1.png">
+        </div>
+        <div class="header-left">
+          <span class="fa fa-bars menu-icon"></span>
+        </div>
+        <div class="header-right">
+          <a href="#">About</a>
+          <a href="#">Service</a>
+          <a href="#" class="login">Log in</a>
+        </div>
+      </div>
+    </header>
+     <div class="top-wrapper">
+      <div class="container">
+        <h1>Hello Pet</h1>
+        <h1>Groomers are Ready to Your Home.</h1>
+        <p>Instantly groom your pet safely and comfortably to be beauty.</p>
+        <div class="btn-wrapper">
+          <a href="#" class="btn signup">Sign Up</a>
+        </div>
       </div>
     </div>
-
-    <div class="main">
-      <section id="1" class="about">
-        <div class="content">
-          <h1>Welcome brader</h1>
-          <p>Here we go again. :)</p>
-          <p><a href="#3">Wanna Join</a></p>
+    <div class="safe-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Our Safety</h2>
         </div>
-      </section>
-
-      <section id="2" class="service">
-        <div class="content">
-          <h1>Services we offer</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio
-            velit inventore, expedita quo laboriosam possimus ea consequatur
-            vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore
-            ut velit dignissimos.
-          </p>
-        </div>
-      </section>
-
-      <section id="about">
-        <h1>About Us</h1>
-        <br>
-        <div class="row">
-          <div class="col">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, voluptatem illum molestiae quisquam nulla aspernatur delectus voluptatum quo, doloribus et porro consectetur possimus architecto nesciunt, magnam ipsam! Molestias ipsum explicabo quod,
-            culpa doloremque eos delectus voluptate cum expedita. Nihil at qui animi illum impedit deleniti fuga, aspernatur error accusantium fugit ad, sed deserunt vitae? Amet nam quaerat, veritatis enim et itaque velit architecto earum, saepe voluptate debitis
-            iure, ab aliquam doloribus. Cum exercitationem eveniet laborum voluptates ipsa eius, soluta commodi. Eos eveniet corporis repellendus, quis ad debitis perferendis veniam sunt molestiae omnis, officia suscipit nesciunt ducimus! Temporibus quis nobis
-            asperiores.
+        <div class="safety">
+          <div class="safe">
+            <div class="safe-icon">
+              <img src="gloves.png">
+            </div>
+             <p class="text-contents">Wear gloves while grooming </p>
           </div>
-          <div class="col">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, voluptatem illum molestiae quisquam nulla aspernatur delectus voluptatum quo, doloribus et porro consectetur possimus architecto nesciunt, magnam ipsam! Molestias ipsum explicabo quod,
-            culpa doloremque eos delectus voluptate cum expedita. Nihil at qui animi illum impedit deleniti fuga, aspernatur error accusantium fugit ad, sed deserunt vitae? Amet nam quaerat, veritatis enim et itaque velit architecto earum, saepe voluptate debitis
-            iure, ab aliquam doloribus. Cum exercitationem eveniet laborum voluptates ipsa eius, soluta commodi. Eos eveniet corporis repellendus, quis ad debitis perferendis veniam sunt molestiae omnis, officia suscipit nesciunt ducimus! Temporibus quis nobis
-            asperiores.
+          <div class="safe">
+            <div class="safe-icon">
+              <img src="wash.png">
+            </div>
+            <p class="text-contents">Wash and sanitize hands before and after grooming</p>
           </div>
+          <div class="safe">
+            <div class="safe-icon">
+              <img src="mask.png">
+            </div>
+            <p class="text-contents">Wear face mask</p>
+          </div>
+          <div class="safe">
+            <div class="safe-icon">
+              <img src="steril.png">
+            </div>
+            <p class="text-contents">Sanitize and clean grooming tools before and after service</p>
+          </div>
+          <div class="clear"></div>
         </div>
-      </section>
-
-      <section id="3" class="contact_us">
-        <div class="content">
-          <h1>You Can Reach Us</h1>
-          <a href="#" class="email button"
-            ><span class="fa-brands fa-google"></span>E-mail</a
-          >
-          <p>atau</p>
-          <a href="#" class="facebook button"
-            ><span class="fa fa-facebook"></span>Facebook</a
-          >
-          <a href="#" class="twitter button"
-            ><span class="fa fa-twitter"></span>Twitter</a
-          >
-        </div>
-      </section>
-    </div>
-
-    <div class="footer">
-      <div class="footer-logo">Tugas</div>
-      <div class="footer-list">
-        <ul>
-          <li>About</li>
-          <li>Service</li>
-          <li>Contact Us</li>
-        </ul>
       </div>
     </div>
+    <div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>What are you waiting for?</h2>
+          <h3>Let's groom your pet at HelloPet</h3>
+        </div>
+        <span class="btn message">BOOK NOW</span>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <img src="Logo1.png">
+        <p>Instantly groom your pet safely and comfortably to be beauty.</p>
+      </div>
+    </footer>
   </body>
 </html>
